fix: reset page size on filter, open explorers in new tab, enable horizontal scroll

--- a/frontend/src/components/HostMetricsDetail/HostMetricsDetail.styles.scss
+++ b/frontend/src/components/HostMetricsDetail/HostMetricsDetail.styles.scss
@@ -21,8 +21,6 @@
 		display: flex;
 		flex-direction: column;
 		padding: 16px;
-
-		overflow: hidden;
 	}
 
 	.title {
